--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Julius Lotsu</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <meta content="julius lotsu, julius, lotsu, portfoliio, julius lotsu portfolio, julius github portfolio" name="This professional portfolio shows my educational background, work experience, skills resume and contacts. For officaial contacts, you can send me an email on mail to juliuslotzu1@gmail.com. Thank you.   ">
+  <meta content="julius lotsu, julius, lotsu, portfoliio, julius lotsu portfolio, julius github portfolio name="keywords">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
