--- a/index.html
+++ b/index.html
@@ -324,9 +324,9 @@
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-app">App</li>
-              <li data-filter=".filter-card">Card</li>
-              <li data-filter=".filter-web">Web</li>
+              <li data-filter=".filter-app">Scratch Activity</li>
+              <li data-filter=".filter-card">Python Programming</li>
+              <li data-filter=".filter-web">Youtube Videos</li>
 			  
 			  <!--li data-filter="*" class="filter-active">All</li>
               <li data-filter=".filter-app">App</li>
